# AoCPacketDecoder

./: .gitignore  AoCPacketDecoder.cabal  README.md
app/: Main.hs
src/: BitMagic.hs  HexMagic.hs  PacketDecoder.hs
