cabal-version:      2.4
name:               AoCPacketDecoder
version:            0.1.0.0

synopsis:           Advent of Code 2021 day 16 implemented in Haskell.
description:        https://adventofcode.com/2021/day/16 implemented in Haskell.
author:             thinker227
copyright:          thinker227 2022



library
    exposed-modules: PacketDecoder

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        mtl >=2.2.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable AoCPacketDecoder
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        AoCPacketDecoder

    hs-source-dirs:   app
    default-language: Haskell2010
